feat: 버스 및 지하철 리펙터링 수행